# vplaylist

./: .env.example  .gitignore  README.md  check.sh  cli_main.py  package-lock.json  pyproject.toml  run.py  run.sh  run_web.sh  run_web_lan.sh
front/: .env.local  package-lock.json  package.json  tailwind.config.js
front/app/: RecoilWrapper.tsx  globals.css  layout.tsx  page.tsx
front/app/player/: page.tsx
front/components/: ParticipantInput.tsx  Playlist.tsx  RouteGuard.tsx  TagInput.tsx  Toolbar.tsx  UpdateInput.tsx  VideoDetails.tsx  VideoPlayer.tsx
front/contexts/: PlaylistContext.tsx  recoilState.ts
front/hooks/: videoDetails.ts
front/lib/: analytics.ts  autodiscover.ts  fetchers.ts
front/src/components/: ModalVideoDetails.svelte  Playlist.svelte  PlaylistElement.svelte  Toolbar.svelte  VideoDetails.svelte  VideoDetailsDisplay.svelte  (+2 more)
front_2/: package-lock.json  package.json
front_2/app/: page.tsx
migrations/: 20230622_01_Pph6a-create-sql.sql  20230622_02_l48TP-add-analytics.sql  20230624_01_fLmeD-add-participant.sql  20230624_02_XtTMl-add-types-tags.sql  20230628_01_L0YZQ-add-accounts.sql  20230630_01_A00qI-add-rootpath-per-account-relation.sql
tests/: test_actions.py  test_playlist.py  test_test.py
vplaylist/: app.py  player.py
vplaylist/actions/: clean_collection.py  clean_database.py  create_analytics.py  create_new_user.py  create_participant.py  create_playlist.py  create_tag.py  create_video_participant_relation.py  create_video_tag_relation.py  delete_video_participant_relation.py  delete_video_tag_relation.py  fetch_playable_video.py  fetch_video.py  fetch_video_details.py  fetch_video_thumbnail_from_uuid.py  generate_thumbnails.py  patch_video_details.py  search_participant.py  search_tag.py  update_collection.py  update_database.py  verify_account.py
vplaylist/config/: config_registry.py
vplaylist/entities/: account.py  analytics.py  playlist.py  search_video.py  video.py  video_file.py
vplaylist/exceptions/: validation_error.py  validation_exception.py
vplaylist/repositories/: account_repository.py  analytics_repository.py  participant_repository.py  playlist_repository.py  tag_repository.py  video_repository.py
vplaylist/service/: create_playlist_service.py  database.py  play_playlist_service.py  player.py
vplaylist/services/: authentication_service.py  database.py  play_playlist_service.py  player.py  video_services.py
vplaylist/utils/: custom_response.py  db_utils.py  query_constructor.py  regex_utils.py  singleton.py
(+17 files in other folders)
