[tool.poetry]
name = "vplaylist-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vplaylist", from = "vplaylist"}]

[tool.poetry.dependencies]
python = "^3.11"
mpv = "^1.0.3"
ruff = "^0.0.265"
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
