[tool.poetry]
name = "vplaylist-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vplaylist", from = "vplaylist"}]

[tool.poetry.dependencies]
python = "^3.11"
mpv = "^1.0.3"
uvicorn = "^0.22.0"
fastapi = {extras = ["all"], version = "^0.95.1"}
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.265"
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.ruff]
# Never enforce 'E501' (line height violations)
ignore = ['E501']
select = ['E', 'B', 'F', 'C90']

[tool.ruff.mccabe]
max-complexity = 8


[tool.mypy]
plugins = "pydantic.mypy"
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true

disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

no_implicit_optional = true
no_implicit_reexport = true

check_untyped_defs = true

warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

show_error_codes = true
show_error_context = true

strict_optional = true


[tool.isort]
profile = "black"
